# gpu_map20

./: CMakeLists.txt  README.md  main.cpp
core/: map20.cu  map20.h  ranks.cpp  ranks.h
fixtures/: blocks.py  checker.py  generator.py
kernels/: constants.h  map20.cu  map20.h  top_n.cu  top_n.h
utils/: argparse.cpp  argparse.h  utils.cpp  utils.h
